--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,37 @@
     <title>App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' %>
+    <%= stylesheet_link_tag 'starter-template' %>
+    <%= yield :stylesheet %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= yield :javascript_top %>
+    <%= yield :javascript_inline_top %>
   </head>
 
   <body>
-    <%= yield %>
+    <% if user_signed_in? %>
+      <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+          <%= render "layouts/navbar" %>
+          <%= link_to 'Sign out', logout_path, :method => :delete, :class => "text-white" %>
+          </div>
+        </nav>
+      </header>
+    <% end %>
+    <main role="main"  class="container">
+      <div class="starter-template">
+        <%= yield :container %>
+      </div>
+    </main>
+
+    <%= javascript_include_tag 'application' %>
+    <%= yield :javascript_bottom %>
+    <%= yield :javascript_inline_bottom %>
+    <%#= javascript_include_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js' %>
   </body>
 </html>
