--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -1,7 +1,12 @@
 <% content_for :container do %>
-  <% if flash[:notice] %>
+  <% if flash[:success] %>
     <div class="alert alert-success" role="alert">
-      <%= flash[:notice] %>
+      <%= flash[:success] %>
+    </div>
+  <% end %>
+  <% if flash[:error] %>
+    <div class="alert alert-danger" role="alert">
+      <%= flash[:error] %>
     </div>
   <% end %>
   <table class="table">
@@ -10,6 +15,7 @@
         <th scope="col">ID</th>
         <th class="text-center" scope="col">Name</th>
         <th class="text-center" scope="col">Unit price</th>
+        <th class="text-center" scope="col">Interest</th>
         <th class="text-center" scope="col">Duration</th>
         <th class="text-center" scope="col">Action</th>
       </tr>
@@ -20,6 +26,7 @@
           <th><%= stock.id %></th>
           <td><%= stock.name %></td>
           <td><%= stock.unit_price %></td>
+          <td><%= stock.interest %>%</td>
           <td><%= stock.duration %></td>
           <td>
             <%= link_to 'View', stock_path(stock) %>
