--- a/app/views/stock/show.html.erb
+++ b/app/views/stock/show.html.erb
@@ -1,45 +1,53 @@
 <% content_for :container do %>
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <div class="row">
-        <div class="col-md-4">
-          Name:
+  <% if @stock.user_id === current_user.id %>
+    <% content_for :javascript_top do %>
+      <%= javascript_include_tag "//www.google.com/jsapi" %>
+      <%= javascript_include_tag 'chartkick' %>
+    <% end %>
+
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="row">
+          <div class="col-md-4">
+            Name:
+          </div>
+          <div class="col-md-8 text-md-right">
+            <%= @stock.name %>
+          </div>
         </div>
-        <div class="col-md-8 text-md-right">
-          <%= @stock.name %>
+        <div class="row">
+          <div class="col-md-4">
+            Unit price:
+          </div>
+          <div class="col-md-8 text-md-right">
+            <%= @stock.unit_price %>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          Unit price:
+        <div class="row">
+          <div class="col-md-4">
+            Interest:
+          </div>
+          <div class="col-md-8 text-md-right">
+            <%= @stock.interest %>
+          </div>
         </div>
-        <div class="col-md-8 text-md-right">
-          <%= @stock.unit_price %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          Interest:
-        </div>
-        <div class="col-md-8 text-md-right">
-          <%= @stock.interest %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          Duration:
-        </div>
-        <div class="col-md-8 text-md-right">
-          <%= @stock.duration %>
+        <div class="row">
+          <div class="col-md-4">
+            Duration:
+          </div>
+          <div class="col-md-8 text-md-right">
+            <%= @stock.duration %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <h2 class="text-center mt-4">Stock valuation changes over its duration in years</h2>
-  <%= column_chart @stock.get_stock_valuation %>
-<% end %>
-
-<% content_for :javascript_top do %>
-  <%= javascript_include_tag "//www.google.com/jsapi" %>
-  <%= javascript_include_tag 'chartkick' %>
+    <h2 class="text-center mt-4">Stock valuation changes over its duration in years</h2>
+    <%= column_chart @stock.stock_valuation %>
+  <% else %>
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <h2 class="text-center">Not found</h2>
+      </div>
+    </div>
+  <% end %>
 <% end %>
