--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -9,30 +9,38 @@
       <%= flash[:error] %>
     </div>
   <% end %>
-  <table class="table">
-    <thead class="thead-light">
-      <tr>
-        <th scope="col">ID</th>
-        <th class="text-center" scope="col">Name</th>
-        <th class="text-center" scope="col">Unit price</th>
-        <th class="text-center" scope="col">Interest</th>
-        <th class="text-center" scope="col">Duration</th>
-        <th class="text-center" scope="col">Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @stocks.each do |stock| %>
-        <tr class="text-center">
-          <th><%= stock.id %></th>
-          <td><%= stock.name %></td>
-          <td><%= stock.unit_price %></td>
-          <td><%= stock.interest %>%</td>
-          <td><%= stock.duration %></td>
-          <td>
-            <%= link_to 'View', stock_path(stock) %>
-          </td>
+  <% if !@stocks.empty? %>
+    <table class="table">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">ID</th>
+          <th class="text-center" scope="col">Name</th>
+          <th class="text-center" scope="col">Unit price</th>
+          <th class="text-center" scope="col">Interest</th>
+          <th class="text-center" scope="col">Duration</th>
+          <th class="text-center" scope="col">Action</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% @stocks.each do |stock| %>
+          <tr class="text-center">
+            <th><%= stock.id %></th>
+            <td><%= stock.name %></td>
+            <td><%= stock.unit_price %></td>
+            <td><%= stock.interest %>%</td>
+            <td><%= stock.duration %></td>
+            <td>
+              <%= link_to 'View', stock_path(stock) %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% else %>
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <h2 class="text-center">No Result</h2>
+      </div>
+    </div>
+  <% end %>
 <% end %>
