--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
           <%= render "layouts/navbar" %>
-          <%= link_to 'Sign out', logout_path, :method => :delete, :class => "text-white" %>
+          <%= link_to 'Sign out', logout_path, :class => "text-white" %>
           </div>
         </nav>
       </header>
