--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
 <ul class="navbar-nav mr-auto">
-  <li class="nav-item">
-    <%= link_to('Home', root_path, {class: 'nav-link'}) %>
+  <li  class="nav-item <%= current_page?(root_path) ? "active" : "" %>">
+    <%= link_to("Home", root_path, {class: "nav-link"}) %>
   </li>
   <li class="nav-item">
-    <%= link_to('Add stock', stock_new_path, {class: 'nav-link'}) %>
+    <%= link_to("Add stock", stock_new_path, { class: "nav-link" }) %>
   </li>
 </ul>
